Changes to bibliography

--- a/Course_notes_latex/bibliography.bib
+++ b/Course_notes_latex/bibliography.bib
@@ -620,3 +620,31 @@ month = jan,
 annote = {doi: 10.1175/JCLI-D-14-00117.1}
 }
 
+@article{Hedemann2017,
+	author = {Hedemann, Christopher and Mauritsen, Thorsten and Jungclaus, Johann and Marotzke, Jochem},
+	doi = {10.1038/nclimate3274},
+	journal = {Nature Climate Change},
+	number = {5},
+	pages = {336--339},
+	title = {{The subtle origins of surface-warming hiatuses}},
+	volume = {7},
+	year = {2017}
+}
+@article{Cox2018,
+	author = {Cox, Peter M. and Huntingford, Chris and Williamson, Mark S.},
+	doi = {10.1038/nature25450},
+	journal = {Nature},
+	number = {7688},
+	pages = {319--322},
+	publisher = {Nature Publishing Group},
+	title = {{Emergent constraint on equilibrium climate sensitivity from global temperature variability}},
+	volume = {553},
+	year = {2018}
+}
+@book{VonStorch2003,
+	address = {Cambridge},
+	author = {von Storch, Hans and Zwiers, Francis W.},
+	publisher = {Cambridge University Press},
+	title = {{Statistical Analysis in Climate Research}},
+	year = {2003}
+}
